--- a/src/dropDown.css
+++ b/src/dropDown.css
@@ -1,27 +1,24 @@
-ul{
-    border: 2 px solid #0000;
-    border-radius: 0 0px 10px 10px;
-    cursor:pointer;
-    overflow: hidden;
-    overflow-y: scroll;
-    font-size: 1.2em;
-    list-style-type: none;
-    background-color: #fff;
-    padding: 10px;
-    margin: 0;
-    height: 120px;
-
+.city-list ul {
+  border: 2 px solid #0000;
+  border-radius: 0 0px 10px 10px;
+  cursor: pointer;
+  overflow: hidden;
+  font-size: 1.2em;
+  list-style-type: none;
+  background-color: #fff;
+  padding: 10px;
+  margin: 0;
 }
-li{
-    padding-bottom: 3px;
+.city-list li {
+  padding-bottom: 3px;
 }
-li:focus{
-outline: none;
-color: blue;
-border: 1 px solid #0000;
+.city-list li:focus {
+  outline: none;
+  color: blue;
+  border: 1 px solid #0000;
 }
 
-li:hover{
-    background-color: #434347;
-    outline: none;
+.city-list li:hover {
+  background-color: #434347;
+  outline: none;
 }
